# CAD_modeler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  test.cpp
cmake/: compilerWarnings.cmake  submodule.cmake
include/CAD_modeler/: camera.hpp  exceptionWithMsg.hpp  model.hpp  modeler.hpp  shader.hpp  window.hpp
include/CAD_modeler/controllers/: glController.hpp  guiController.hpp  mainController.hpp  millingSimController.hpp  millingsPathsDesignerController.hpp  modelerController.hpp  subController.hpp
include/CAD_modeler/model/: cameraManager.hpp  ecsCoordinator.hpp  entitiesManager.hpp  idManager.hpp  millingMachineSim.hpp  millingPathsDesigner.hpp  model.hpp  modeler.hpp
include/algebra/: conjugateGradientMethod.hpp  mat4x4.hpp  newtonMethod.hpp  quat.hpp  systemsOfLinearEquasions.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/ecs/: componentsCollection.hpp  componentsManager.hpp  coordinator.hpp  emptyComponentConcept.hpp  eventHandler.hpp  eventsManager.hpp  system.hpp  systemConcept.hpp  systemsManager.hpp
include/graph/: graph.hpp
include/openglHelpers/: debug.hpp  saveFramebuffer.hpp
include/optimization/: conjugateGradientMethod.hpp  functionToOptimize.hpp  lineSearch.hpp  stopCondition.hpp  utils.hpp
include/rootFinding/: functionToFindRoot.hpp  newtonMethod.hpp
models/: fish_model.json
shaders/: bSplineSurfaceShader.tese  bSplineSurfaceTrianglesShader.tese  bezierCurveShader.tese  bezierShader.tesc  bezierSurfaceShader.tese  bezierSurfaceTrianglesShader.tese  constNormalShader.vert  fragmentShader.frag  gregoryPatchShader.tese  grid.frag  grid.vert  gridShader.frag  heightMapShader.vert  heightmapShader.tesc  heightmapShader.tese  millingMaterialSide.vert  phongShader.frag  stdShader.frag  stdShader.vert  trimmedBSplineSurfaceShader.tese  trimmedBezierSurfaceShader.tese  trimmedShader.frag  trimmedTorusShader.vert
src/: CMakeLists.txt  camera.cpp  model.cpp  shader.cpp  window.cpp
src/algebra/: conjugateGradientMethod.cpp  mat4x4.cpp  newtonMethod.cpp  quat.cpp
src/controllers/: glController.cpp  guiController.cpp  mainController.cpp
src/controllers/utils/: mouseState.cpp
src/graph/alg/: cycleDetection.cpp
src/model/: idManager.cpp
src/model/components/: position.cpp  rotation.cpp  torusParameters.cpp
src/model/systems/: cameraSystem.cpp  cursorSystem.cpp  gridSystem.cpp  meshRenderer.cpp  nameSystem.cpp  pointsSystem.cpp  selectionSystem.cpp  toriSystem.cpp
src/modeler/: model.cpp  modeler.cpp  shader.cpp  window.cpp
src/modeler/controllers/: glController.cpp  guiController.cpp  mainController.cpp  millingPathsDesignerController.cpp  millingSimController.cpp  modelerController.cpp  subController.cpp
src/modeler/controllers/utils/: mouseState.cpp
src/modeler/model/: cameraManager.cpp  millingMachineSim.cpp  millingPathsDesigner.cpp  model.cpp  modeler.cpp  saveManager.cpp
src/modeler/model/components/: c0SurfacePatches.cpp  curveControlPoints.cpp  gregoryPatchParameters.cpp  mesh.cpp  millingCutter.cpp  millingMaterial.cpp  millingWarningsRepo.cpp  position.cpp  registerComponents.cpp  rotation.cpp  scale.cpp  texture2D.cpp  torusParameters.cpp  uvVisualization.cpp
src/modeler/model/managers/: cameraManager.cpp  loadManager.cpp  saveManager.cpp
src/modeler/model/millingPathsDesigner/: boundaryIntersectionFinder.cpp  broadPhaseHeightMap.cpp  depthBuffer.cpp  millingMachinePathsBuilder.cpp
src/modeler/model/systems/: anaglyphsCameraSystem.cpp  bezierCurveSystem.cpp  c0CurveSystem.cpp  c0CylinderSystem.cpp  c0PatchesRenderSystem.cpp  c0PatchesSystem.cpp  c0PatchesTrianglesRenderSystem.cpp  c0SurfaceSystem.cpp  c2CurveSystem.cpp  c2CylinderSystem.cpp  c2PatchesRenderSystem.cpp  c2PatchesSystem.cpp  c2PatchesTrianglesRenderSystem.cpp  c2SurfaceSystem.cpp  cameraSystem.cpp  controlNetSystem.cpp  controlPointsRegistrySystem.cpp  controlPointsSystem.cpp  cursorSystem.cpp  curveControlPointsSystem.cpp  equidistanceC2SurfaceSystem.cpp  gregoryPatchesSystem.cpp  gridSystem.cpp  interpolationCurveSystem.cpp  interpolationCurvesRenderingSystem.cpp  intersectionsSystem.cpp  meshLoader.cpp  meshRenderer.cpp  millingMachinePathsSystem.cpp  millingMachineSystem.cpp  nameSystem.cpp  pointsSystem.cpp  polylineSystem.cpp  positionSystem.cpp  selectionSystem.cpp  toUpdateSystem.cpp  toriRenderingSystem.cpp  toriSystem.cpp  trimmedC0PatchesRenderSystem.cpp  trimmedC2PatchesRenderSystem.cpp  (+3 more)
src/modeler/model/systems/c0PatchesSystem/: singleC0Patch.cpp
src/modeler/model/systems/c2SurfacesSystem/: singleC2Patch.cpp
src/modeler/model/systems/camera/: anaglyphsCameraSystem.cpp  perspectiveCameraSystem.cpp
src/modeler/model/systems/intersectionSystem/: c0Surface.cpp  c2Surface.cpp  equidistanceSurface.cpp  nextPointFinder.cpp
src/modeler/model/systems/shaders/: shader.cpp
src/modeler/model/utils/: nameGenerator.cpp
src/modeler/utilities/: asyncWorker.cpp  hashCombine.cpp  line.cpp  lineDrawer.cpp  linePlotter.cpp  lineSegment.cpp  lineSegment2D.cpp  plane.cpp  toPGM.cpp
src/modeler/views/: guiView.cpp  mainMenuBar.cpp  millingPathsDesignerView.cpp  millingSimulatorView.cpp  modelChooser.cpp  modelerGuiUtils.cpp  modelerGuiView.cpp
src/modeler/views/modeler/: modelerGuiUtils.cpp  modelerGuiView.cpp  modelerMainMenuBar.cpp  modelerMainMenuView.cpp  modelerMenuBar.cpp  modelerObjectsPropertiesView.cpp
src/objects/: object.cpp  torus.cpp
src/openglHelpers/: debug.cpp  saveFramebuffer.cpp
src/optimization/: conjugateGradientMethod.cpp
src/optimization/lineSearchMethods/: dichotomyLineSearch.cpp
src/optimization/stopConditions/: smallGradient.cpp
src/rootFinding/: newtonMethod.cpp
src/views/: guiView.cpp
tests/: CMakeLists.txt  componentManagerTests.cpp  planeTests.cpp
tests/algebra/: CMakeLists.txt  conjugateGradientMethodTests.cpp  matrixTests.cpp  newtonMethodTests.cpp  quaternionTests.cpp  systemsOfLinearEquationsTests.cpp
tests/ecs/: CMakeLists.txt  componentManagerTests.cpp
tests/modeler/: CMakeLists.txt  angleTests.cpp  cameraSystemTests.cpp  planeTests.cpp
(+192 files in other folders)
